<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/search_box"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:alpha=".05"
        android:src="@drawable/ic_person_add" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/invite_form"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pass_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/invite_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/pass_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/invite_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:id="@+id/driver_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/invite_text_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/driver_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/invite_text_2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/invite_code"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/inviteCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/invite_share"
                app:bootstrapBrand="success"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:showOutline="false" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>