<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_activity_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/logo_full" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/woman_rdo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:text="@string/woman"
                            android:textColor="@color/primary_text" />

                        <RadioButton
                            android:id="@+id/man_rdo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:checked="true"
                            android:text="@string/man"
                            android:textColor="@color/primary_text" />


                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="Name"
                    android:textColorHint="@color/secondary_text">

                    <AutoCompleteTextView
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:nextFocusDown="@+id/et_family"
                        android:textColor="@color/primary_text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="Family"
                    android:textColorHint="@color/secondary_text">

                    <AutoCompleteTextView
                        android:id="@+id/et_family"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/family"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:nextFocusDown="@+id/et_regMobile"
                        android:textColor="@color/primary_text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="Email"
                android:textColorHint="@color/secondary_text">

                <AutoCompleteTextView
                    android:id="@+id/et_regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/et_theCode"
                    android:textColor="@color/primary_text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/secondary_text">

                <EditText
                    android:id="@+id/et_theCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_code"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/primary_text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:onClick="gotoRules"
                android:text="@string/accept_terms"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary_text" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/b_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_background_states"
                android:elevation="5dp"
                android:padding="12dp"
                android:text="@string/label_login"
                android:textColor="@color/text"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>